Add Roboto font in custom css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400&display=swap');
+
 .bg-style{
+    font-family: 'Roboto', sans-serif;
     background-color: #e2d7d780;
     border-radius: 10px;
 }
