Add Roboto font in custom css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,6 @@
 
 .bg-style{
     font-family: 'Roboto', sans-serif;
-    background-color: #e2d7d780;
     border-radius: 10px;
+    background-color: #152e66;
 }
