Add new style in css and add class in the head in index file

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,3 +33,12 @@ a{
 a:hover{
     color: #ffffff;
 }
+/* ******************************** */
+/* Heading style */
+/* ******************************** */
+.heading-style
+{
+    margin-top: 5rem;
+    font-family: 'Roboto', sans-serif;
+    font-style: bold;
+}
