Add comment in the css file and add class in logout button for 20px margin botton

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,3 +42,9 @@ a:hover{
     font-family: 'Roboto', sans-serif;
     font-style: bold;
 }
+/* ******************************** */
+/* Margin bottom */
+/* ******************************** */
+.mb-20{
+    margin-bottom: 20px;
+}
